--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="span12">      
                 <div id="selectedF1" class="selectedFiles"></div>
             </div>
-<h2>Hello world!</h2>
+<h2>Hello world =)</h2>
 
 <script type="text/javascript" src="jquery-1.9.1.min.js"></script>
 </div>
