--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Labled blobs</title>
+<title>NINJOH</title>
 
 <style>
 	.selectedFiles img {
@@ -24,7 +24,7 @@
             </div>
 <h2>Hello world =)</h2>
 
-<script type="text/javascript" src="jquery-1.9.1.min.js"></script>
+<!--script type="text/javascript" src="jquery-1.9.1.min.js"></script-->
 </div>
 
 </body>
